--- a/content.css
+++ b/content.css
@@ -5,10 +5,9 @@
  * Styles for user labels and tooltips displayed on X.com/Twitter pages.
  * Includes modern flat 2D design with custom color schemes.
  * 
- * @version 1.0.0
+ * @version 1.0.1
  * 
- * Copyright (c) 2025 Lomaxxx
- * All Rights Reserved.
+ * Copyright (c) 2025 by Lomaxxx
  * 
  * This software and associated documentation files (the "Software") are 
  * proprietary and confidential. Unauthorized copying, modification, 
